# gamemaster

./: .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml  run-java-tests.sh
abis/: zk-contract.abi
contracts/: .gitignore  Cargo.toml  README.md  run-java-tests.sh
contracts/coordinator/: Cargo.toml  README.md
contracts/coordinator/src/: contract.rs
contracts/gamemaster/: Cargo.toml  README.md
contracts/gamemaster/src/: contract.rs  contract_state.rs  zk_compute.rs
contracts/gamemaster/src/games/: game_behaviour.rs  mod.rs
contracts/java-test/: pom.xml
contracts/java-test/src/test/java/examples/: CoordinatorTest.java  GamemasterJunitContractTest.java  GamemasterTest.java  ZkGuessTheNumberTest.java  ZkSabotageTest.java
contracts/java-test/src/test/java/examples/games/: ZkGuessTheNumberTest.java  ZkSabotageTest.java  ZkSplitOrConquerTest.java
contracts/zk-guess-the-number/: README.md
contracts/zk-guess-the-number/src/: zk_compute.rs
contracts/zk-sabotage/: Cargo.toml
contracts/zk-sabotage/src/: contract.rs  zk_compute_test.rs
java-test/src/test/java/examples/: ZkSabotageTest.java
web/: .eslintrc.json  .prettierrc.json  README.md  netlify.toml  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
web/contracts_gen/clients/: gamemaster.ts
web/src/: config.ts
web/src/app/: layout.tsx  not-found.tsx  page.tsx
web/src/app/_components/: go-to-game-input.tsx
web/src/app/api/game-state/: route.tsx
web/src/app/create-arcade/: page.tsx
web/src/app/create-arcade/_components/: add-game-modal.tsx  deploy-button.tsx  game-preview-card.tsx
web/src/app/create-arcade/_components/game-setting/: game-setting.tsx  guess-the-number-game-setting.tsx  sabotage-game-setting.tsx  split-or-conquer-game-setting.tsx
web/src/app/deploying/[txHash]/: page.tsx
web/src/app/games/: page.tsx
web/src/app/games/[slug]/: page.tsx
web/src/app/games/[slug]/_components/: game-points.tsx  game-rules.tsx  game-status.tsx  games-overview.tsx  main-game-screen.tsx
web/src/app/games/[slug]/_components/admin/: admin-action-box.tsx  end-game-button.tsx  guess-the-number-admin.tsx  next-game-button.tsx  use-can-game-start.tsx
web/src/app/games/[slug]/_components/players/: player-grid.tsx  (+4 more)
web/src/app/orchestrate-game/: page.tsx
web/src/app/orchestrate-game/_components/: add-game-modal.tsx  deploy-button.tsx  game-preview-card.tsx  start-game-button.tsx
web/src/app/orchestrate-game/_components/game-setting/: game-setting.tsx  guess-the-number-game-setting.tsx  sabotage-game-setting.tsx
web/src/components/: chain-action-button.tsx  header.tsx  spinner-button.tsx  spinner.tsx
web/src/components/context/: game-state.context.tsx  gamemaster-server-provider.tsx  gamemaster.context.tsx
web/src/components/context/identity/: identity.context.tsx  server-identity-provider.tsx
web/src/components/header/: dropdown-menu-item-logout.tsx  gamemaster-logo.tsx  header.tsx  profile.tsx
web/src/components/ui/: button.tsx  loading-button.tsx  slider.tsx
web/src/components/wallet/: connect-wallet.tsx  wallet-identity.ts  zk-action-modal.tsx
web/src/contracts_gen/: README.md
web/src/contracts_gen/clients/: gamemaster.ts  zk.ts
web/src/contracts_gen/gamemaster/: gamemaster.abi  gamemaster.zkwa
web/src/lib/: confetti.ts  partisia.ts
web/src/lib/game-actions/: actions.hook.ts  base-actions.ts  guess-the-number-actions.ts  sabotage-actions.ts  split-or-conquer-actions.ts
web/src/server/: partisia.client.ts
web/src/server/chain-actions/: types.ts
web/src/server/create-arcade/: add-game.ts  change-game-setting.ts  deploy-game.ts  get-pending-game-settings.ts  storage.ts  types.ts
web/src/server/game/: get-game-contract-by-transaction.ts  get-game-state.ts
web/src/server/orchestrate-game/: add-game.ts  change-game-setting.ts  deploy-game.ts  get-pending-game-settings.ts  remove-game.ts  storage.ts  types.ts
web/src/server/user/: auth.tsx  cookie-auth.ts
zk-guess-the-number/: Cargo.toml
zk-guess-the-number/src/: contract.rs
zk-sabotage/: README.md
zk-sabotage/src/: contract.rs  zk_compute.rs
(+6 files in other folders)
